# kubernetes-watch

./: README.md  kube-watch.cabal  kubernetes-watch.cabal  stack.yaml
src/: Main.hs
src/Kubernetes/: WatchClient.hs  WatchEvent.hs
