name:                kubernetes-watch
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/kube-watch#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:
    Kubernetes.WatchClient
  build-depends:
    base >= 4.7 && < 5
    , aeson
    , bytestring
    , http-client
    , kubernetes
    , mtl
    , streaming-bytestring
    , text
